         a (indirect) base of the other. (#646)
       + restore_object() checks if the types of restored data are compatible
         with the declared types of variables, if runtime type checks are
         enabled in the program of the object.
       + clone_object() does not deactivate an active heart_beat in a 
         blueprint. (#747)

    - Removed Efuns:
       + The deprecated efuns cat() and tail() were removed. They can be
         easily and more flexibly replaced by sefuns, which are supplied with
         the driver. (#637, #228)

    - Portability
       + Removed built-in PCRE package, because it was awfully out of date.
         Since libpcre is installed on nearly every halfway POSIX compatible
         system, we just link against the system libpcre. If there is none
         available, no PCREs are available in the driver (#658).
       + Removed a bunch of checks and own fall-back implementations for
         functions required by C89/90/99 or POSIX.1. We just require them.
       + The data from the bytecode is not written/read byte per byte and
         combined by shifting and masking anymore, but by reading the
         specific type directly. This should not have endianness issues, as
         long as compiled bytecode is not transferred to a different machine.
         But Alignment issues may arise on some system.
       + The bytecode uses fixed-size integer types from C99.
       + Entities in the bytecode are getting their semantic types (like
         bc_offset_t).
       + Take more care of issues with different width of integers in the
         bytecode (e.g. long was regarded as 32 bit until now).
       + Improved detection of working sbrk/brk() and malloc replaceability.
         Enabled the possibility to replace malloc while using mmap()
         independently of the old SBRK_OK. (#680)

    - Runtime
       + re-worked and consolidated hash functions and hash types. (#564)