@@ -33,6 +33,8 @@ xx-xxx-2009 (LDMud Team) -- 3.5.0
          enabled in the program of the object.
        + clone_object() does not deactivate an active heart_beat in a 
          blueprint. (#747)
+       + Fixed result of convert_charset(): returns now the unchanged string
+         if it gets an empty string for conversion. (#739)
 
     - Removed Efuns:
        + The deprecated efuns cat() and tail() were removed. They can be
